Clase de FlexBox

--- a/Practica_01/index.html
+++ b/Practica_01/index.html
@@ -69,11 +69,18 @@
         </div>
     </section>
    
+    <div class="container_tres">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
+
     <article>
         <img src="https://peluchesfantasia.com/cdn/shop/products/peluche-panda-pequeno_600x.png?v=1607815246" alt="">
         <h2>Producto del mes</h2>
         <p>Increible despues de comprar este producto mi facebook cambio de color y mi cabello crecio 15 cm !!!!</p>
     </article>
+
     <footer>
         <p>Todos los derechos reservados &#169 MiniFake 2024</p>
     </footer>
